--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,44 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.keerJob</groupId>
-  <artifactId>keer-job</artifactId>
-  <packaging>pom</packaging>
-  <version>1.0-SNAPSHOT</version>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.keerJob</groupId>
+    <artifactId>keer-job</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
 
-	<name>${project.artifactId}</name>
-  <url>http://maven.apache.org</url>
-	<description>A lightweight distributed task scheduling framework.</description>
+    <name>${project.artifactId}</name>
+    <url>http://maven.apache.org</url>
+    <description>A lightweight distributed task scheduling framework.
+    </description>
 
-	<properties>
-		<jetty-server.version>9.2.22.v20170606</jetty-server.version>
-	</properties>
+    <properties>
+        <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
+        <jsp-api.version>2.2</jsp-api.version>
 
-	<modules>
-		<module>keer-job-admin</module>
-	</modules>
+        <spring.version>3.2.18.RELEASE</spring.version>
+        <jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
+        <slf4j-api.version>1.7.25</slf4j-api.version>
+        <freemarker.version>2.3.20</freemarker.version>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+        <commons-beanutils.version>1.9.2</commons-beanutils.version>
+        <commons-lang.version>2.6</commons-lang.version>
+
+        <jetty-server.version>9.2.22.v20170606</jetty-server.version>
+    </properties>
+
+    <modules>
+        <module>keer-job-admin</module>
+        <module>keer-job-core</module>
+    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
