--- a/keer-job-admin/src/main/resources/keer-job-admin.properties
+++ b/keer-job-admin/src/main/resources/keer-job-admin.properties
@@ -1,2 +1,9 @@
+### keer-job db  (use &amp; replace & in xml)
+xxl.job.db.driverClass=com.mysql.jdbc.Driver
+xxl.job.db.url=jdbc:mysql://localhost:3306/xxl_job_keer?useUnicode=true\
+  &characterEncoding=UTF-8
+xxl.job.db.user=root
+xxl.job.db.password=123456
+
 keer.job.login.username=admin
 keer.job.login.password=123456
