--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
         <commons-lang.version>2.6</commons-lang.version>
 
+        <c3p0.version>0.9.5.2</c3p0.version>
+        <mysql-connector-java.version>5.1.29</mysql-connector-java.version>
+        <mybatis-spring.version>1.2.2</mybatis-spring.version>
+        <mybatis.version>3.2.8</mybatis.version>
+
         <jetty-server.version>9.2.22.v20170606</jetty-server.version>
     </properties>
 
